assets/css/main.css
/* ... */
ol li {
  padding-left: 0.25em;
}

/* Actions */

ul.actions {
  list-style: none;
  padding-left: 0;
  margin: 3em 0 0 0;
}

ul.actions li {
  display: inline-block;
  margin: 0 0.75em 0 0.75em;
  padding-left: 0;
}

ul.actions li:first-child {
  margin-left: 0;
}

ul.actions li:last-child {
  margin-right: 0;
}

ul.actions.special {
  text-align: center;
}

/* Feature List */

.feature-list {
  max-width: 58em;
  margin-left: auto;
  margin-right: auto;
  position: relative;
  top: 0.75em;
}

.feature-list section {
  border-top: solid 1px #eee;
  padding-top: 3em;
  padding-left: 5em;
  position: relative;
}

@media screen and (min-width: 981px) {
  .feature-list > .row > :nth-child(-n + 2) > section {
    border-top: 0;
    padding-top: 0;
  }
}

.feature-list h3 {
  color: #590c80 !important;
  margin: -0.35em 0 0.75em 0;
  font-size: 1.15em;
  letter-spacing: 0.05em;
}

.feature-list h3:before {
  display: block;
  color: #fff;
  background: #2f333b url("images/overlay.png");
  border-radius: 2.5em;
  text-align: center;
  width: 2.5em;
  height: 2.5em;
  line-height: 2.5em;
  margin-right: 0.75em;
  position: absolute;
  left: 0;
  margin-top: -0.5em;
}

.feature-list.small section {
  padding-left: 3.5em;
}

.feature-list.small h3:before {
  font-size: 0.8em;
}

/* Icons */

.icon {
  text-decoration: none;
  text-decoration: none;
}

.icon:before {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  font-style: normal;
  font-variant: normal;
  text-rendering: auto;
  line-height: 1;
  text-transform: none !important;
  font-family: "Font Awesome 5 Free";
  font-weight: 400;
}

.icon:before {
  line-height: inherit;
  font-size: 1.25em;
}

.icon > .label {
  display: none;
}

.icon.solid:before {
  font-weight: 900;
}

.icon.brands:before {
  font-family: "Font Awesome 5 Brands";
}

/* Box */

.box header {
  margin: 0 0 1.5em 0;
}

.box header.style1 {
  position: relative;
  margin: -0.5em 0 0 0;
  padding-top: 0;
}

.box h2 {
  margin: 0 0 0.75em 0;
  font-size: 1.15em;
  letter-spacing: 0.05em;
}

.box h3 {
  margin: 0 0 0.5em 0;
  font-size: 1em;
  font-weight: 600;
  letter-spacing: 0.05em;
}

.box.post-excerpt .image.left {
  position: relative;
  top: 0.5em;
  width: 5em;
}

.box.post-excerpt h3,
.box.post-excerpt p {
  margin-left: 7em;
}

/* Wrapper */

.wrapper {
  position: relative;
  padding: 6em 0 9em 0;
}

.wrapper .title {
  position: absolute;
  top: 0;
  left: 20%;
  text-align: center;
  text-transform: uppercase;
  display: block;
  font-weight: 700;
  letter-spacing: 0.25em;
  font-size: 0.9em;
  width: 25em;
  height: 3.25em;
  top: -3.25em;
  line-height: 3.25em;
  margin-bottom: -3.25em;
  margin-left: -12.5em;
  padding-top: 0.5em;
}

.wrapper .title:before {
  content: "";
  position: absolute;
  bottom: -38px;
  left: -35px;
  width: 35px;
  height: 38px;
  background: url("images/shadow.png");
}

.wrapper .title:after {
  -moz-transform: scaleX(-1);
  -webkit-transform: scaleX(-1);
  -ms-transform: scaleX(-1);
  transform: scaleX(-1);
  content: "";
  position: absolute;
  bottom: -38px;
  right: -35px;
  width: 35px;
  height: 38px;
  background: url("images/shadow.png");
}

.wrapper.style1 {
  background: #20042f url("images/overlay.png");
  color: #eee;
  color: rgba(255, 255, 255, 0.75);
}

.wrapper.style1 .title {
  background: #65506eb0 url("images/overlay.png");
  color: #000000;
}

.wrapper.style1 h1,
.wrapper.style1 h2,
.wrapper.style1 h3,
.wrapper.style1 h4,
.wrapper.style1 h5,
.wrapper.style1 h6,
.wrapper.style1 strong,
.wrapper.style1 b,
.wrapper.style1 a {
  color: #fff;
}

.wrapper.style2 {
  background: #000000;
}

.wrapper.style2 .title {
  background: #000000;
  color: #484d55;
}

.wrapper.style3 {
  background: #000000 url("images/overlay.png");
}

.wrapper.style3 .title {
  background: #000000 url("images/overlay.png");
  color: #000000;
}

.wrapper.style3 .image {
  border: solid 10px #fff;
}

/* Page Wrapper */

#page-wrapper > section {
  margin-bottom: 0;
}

/* Header */

#header {
  display: -moz-flex;
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  -moz-align-items: center;
  -webkit-align-items: center;
  -ms-align-items: center;
  align-items: center;
  -moz-justify-content: center;
  -webkit-justify-content: center;
  -ms-justify-content: center;
  justify-content: center;
  position: relative;
  height: 24em;
  background: url("../../images/banner.jpg") center center;
  background-size: cover;
  padding: 0;
}

#header:before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: url("images/overlay.png");
}

.homepage #header {
  height: 9em;
}

/* Logo */

#logo {
  width: 45%;
  text-align: center;
  position: relative;
  height: 9em;
  display: flex;
  align-items: center;
}

#logo h1 {
  font-weight: 900;
  text-transform: uppercase;
  color: #b1b4b9;
  font-size: 3em;
  letter-spacing: 0.25em;
}

#logo p {
  color: #000000;
  color: rgba(203, 203, 203, 0.5);
  text-transform: uppercase;
  display: block;
  letter-spacing: 0.2em;
  font-size: 0.6em;
  margin-top: 10px;
}

/* Nav */

#nav {
  position: absolute;
  display: block;
  width: 100%;
  text-align: right;
}

#nav .menu-container {
  width: 54%;
  float: right;
}

#nav .menu-inner-container {
  height: 9em;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  margin-right: 20px;
}

#nav .title-text {
  display: flex;
  align-items: center;
}

#nav > div > div > ul {
  display: inline-block;
  border-radius: 0.35em;
  box-shadow: inset 0px 0px 1px 1px rgba(255, 255, 255, 0.25);
  padding: 0 1em 0 1em;
}

#nav > div > div > ul > li {
  display: inline-block;
  text-align: center;
  padding: 0 0.8em 0 0.8em;
}

#nav > div > div > ul > li > ul {
  display: none;
}
/* ... */

